; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_format_clear_flag.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_utils.c_format_clear_flag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_format = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_format*, i32)* @format_clear_flag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_clear_flag(%struct.wined3d_format* %0, i32 %1) #0 {
  %3 = alloca %struct.wined3d_format*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.wined3d_format* %0, %struct.wined3d_format** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %24, %2
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.wined3d_format*, %struct.wined3d_format** %3, align 8
  %9 = getelementptr inbounds %struct.wined3d_format, %struct.wined3d_format* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @ARRAY_SIZE(i32* %10)
  %12 = icmp ult i32 %7, %11
  br i1 %12, label %13, label %27

13:                                               ; preds = %6
  %14 = load i32, i32* %4, align 4
  %15 = xor i32 %14, -1
  %16 = load %struct.wined3d_format*, %struct.wined3d_format** %3, align 8
  %17 = getelementptr inbounds %struct.wined3d_format, %struct.wined3d_format* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i32, i32* %5, align 4
  %20 = zext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %15
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %13
  %25 = load i32, i32* %5, align 4
  %26 = add i32 %25, 1
  store i32 %26, i32* %5, align 4
  br label %6

27:                                               ; preds = %6
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
